[metadata]
name = ULDP
version = 0.0.1
author = Juntao Li
author_email = a1595042264@gmail.com
description = For using ULDP mechanisms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamescalam/aesthetic_ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True